# Task-Scheduler

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  task_scheduler_docs.md
.github/workflows/: ci.yml
Schema/: README.md  alert.schema.json  database_schema.sql  dead_letter.schema.json  heartbeat.schema.json  job.schema.json  job_event.schema.json  job_execution.schema.json
docs/: lessons_learned.md  runbook.md  technical_design.md
scheduler_app/: __init__.py  accounts_urls.py  admin.py  apps.py  auth.py  checks.py  forms.py  login_throttle.py  models.py  urls.py  views.py  views_auth.py
task_scheduler/: asgi.py  logging.py  settings.py  test_settings.py  test_settings_postgres.py  urls.py  wsgi.py
tests/: conftest.py  test_audit_fixes.py  test_audit_implementations.py  test_auth.py  test_cli.py  test_cli_audit.py  test_coverage_cli_extended.py  test_coverage_cli_views.py  test_coverage_demo_tasks.py  test_coverage_remaining.py  test_coverage_schedules.py  test_coverage_services.py  test_coverage_task_config.py  test_coverage_worker_admin.py  test_interfaces.py  test_management_loops.py  test_max_coverage.py  test_misfire_policies.py  test_overlap.py  test_polish.py  test_polish_hardening.py  test_postgresql_concurrency.py  test_retention.py  test_round2.py  test_round3.py  test_round4.py  test_scheduler_flow.py  test_schedules.py  test_stale_worker.py  test_timeout.py  test_views.py  test_worker_reliability.py
(+66 files in other folders)
